syntax = "proto3";

option csharp_namespace = "CareerCloud.gRPC";
package securitylogin;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service SecurityLogin{
	rpc PostSecurityLogin(MultipleSecurityLogins) returns (google.protobuf.Empty);
    rpc GetSecurityLogin(SecurityLoginId) returns (SecurityLoginType);
    rpc GetAllSecurityLogin(google.protobuf.Empty) returns (MultipleSecurityLogins);
    rpc PutSecurityLogin(MultipleSecurityLogins) returns (google.protobuf.Empty);
    rpc DeleteSecurityLogin(MultipleSecurityLogins) returns (google.protobuf.Empty);
}
message SecurityLoginId{
    string Id = 1;
}
message SecurityLoginType {
    string Id = 1;                     
    string Login = 2;                  
    string Password = 3;               
    google.protobuf.Timestamp Created = 4;             
    google.protobuf.Timestamp PasswordUpdate = 5;      
    google.protobuf.Timestamp AgreementAccepted = 6;    
    bool IsLocked = 7;                 
    bool IsInactive = 8;               
    string EmailAddress = 9;           
    string PhoneNumber = 10;           
    string FullName = 11;              
    bool ForceChangePassword = 12;     
    string PrefferredLanguage = 13;    
}

message MultipleSecurityLogins{
	repeated SecurityLoginType securitylogins = 1;
}